[package]
name = "jsonrpc"
version = "0.1.0"
authors = ["unpluggedcoder <milong.xb@alibaba-inc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
lazy_static = "1.4"
tokio = { version = "0.2", features = ["full"] }  # tokio 0.2 not compatibile with futures 0.1
futures = { version = "0.3", features = ["compat"] }  # We need "compat" feature.
jsonrpc-http-server = { version = "14.2.0", optional = true }
jsonrpc-tcp-server = "14.2.0"
jsonrpc-core = "14.2.0"                           # Use futures 0.1
jsonrpc-derive = "14.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
http-server = ["jsonrpc-http-server"]
