[package]
name = "tcp-client"
version = "0.1.0"
authors = ["unpluggedcoder <milong.xb@alibaba-inc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
async-std = "1.6.2"
structopt = "0.3"
futures = "0.3"
